# micrograd-cpp-2023

./: CMakeLists.txt  LICENSE  README.md  loss_plot.gp
.github/workflows/: cmake-multi-platform.yml
examples/: CMakeLists.txt  binary-classifier.cpp  c-plus-equals-cycle.dot  example-usage-cycle.cpp  example-usage.cpp  mlp1.cpp  neuron.cpp  regression0.cpp
include/: array.h  backprop.h  funcy.h  graph.h  loss.h  mac.h  nn.h  quickmath.h  randomdata.h  tuple.h  value.h
tests/: CMakeLists.txt  graph-test.cpp  mac-test.cpp  multivariate-test.cpp  neuron-test.cpp  nn-double-test.cpp  nn-test.cpp  value-neuron-test.cpp  value-test.cpp
